<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Basic Note</string>

    <!-- Fragment Titles -->
    <string name="notes">Notes</string>
    <string name="labels">Labels</string>
    <string name="deleted">Deleted</string>
    <string name="archived">Archived</string>
    <string name="settings">Settings</string>

    <string-array name="questions" tools:ignore="InconsistentArrays">
        <item>What city were you born in?</item>
        <item>What is your lucky number?</item>
        <item>What is your favorite color?</item>
        <item>What is your childhood nickname?</item>
        <item>What is your favorite food?</item>
        <item>Who is your close friend?</item>
        <item>What was your favorite school teacher’s name?</item>
        <item>What is your zodiac sign?</item>
        <item>What is your favorite book title?</item>
    </string-array>

    <!-- Menu Options -->
    <string name="share">Share</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="add_images">Add images</string>
    <string name="delete_all">Delete all</string>
    <string name="change_color">Change color</string>
    <string name="delete_forever">Delete forever</string>

    <!-- Pinning -->
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="pinned">Pinned</string>
    <string name="others">Others</string>

    <!-- Chooser dialog hints -->
    <string name="view_note">View note…</string>

    <!-- Dialogs -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="open_link">Open link</string>
    <string name="make_list">Make list</string>
    <string name="take_note">Take note</string>
    <string name="add_label">Add label</string>
    <string name="export">Export</string>
    <string name="view_file">View file</string>
    <string name="save_to_device">Save to device</string>
    <string name="edit_label">Edit label</string>
    <string name="label_exists">Label exists</string>
    <string name="delete_label">Delete label?</string>
    <string name="create_new">No labels yet. Create one?</string>
    <string name="delete_all_notes">Delete all notes?</string>
    <string name="delete_note_forever">Delete note forever?</string>
    <string name="your_notes_associated">Your notes attached to this label will not be deleted</string>

    <!-- Lists and Notes -->
    <string name="note">Note</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="add_item">Add Item</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="bold">Bold</string>
    <string name="link">Link</string>
    <string name="italic">Italic</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="clear_formatting">Clear formatting</string>
    <string name="monospace">Monospace</string>

    <!-- Miscellaneous -->
    <string name="saved_to_device">Saved to device</string>
    <string name="saved_to_notally">Saved to Notally</string>
    <string name="empty_note">Empty note</string>
    <string name="empty_list">Empty list</string>

    <!-- Messages -->
    <string name="cant_open_link">Can\'t open link</string>
    <string name="invalid_image">Invalid image</string>
    <string name="invalid_backup">Invalid backup</string>
    <string name="imported_backup">Imported backup</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="image_format_not_supported">Image format not supported</string>
    <string name="install_an_email">Install an email app to send feedback</string>
    <string name="install_a_browser">Install a browser to open this link</string>

    <!-- Settings Page -->
    <string name="appearance">Appearance</string>

    <string name="view">View</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>

    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow system</string>

    <string name="date_format">Date format</string>
    <string name="none">None</string>

    <string name="text_size">Text size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="content_density">Content density</string>
    <string name="max_items_to_display">Max items to display in list</string>
    <string name="max_lines_to_display">Max lines to display in note</string>

    <string name="backup">Backup</string>

    <!-- Auto backup -->
    <string name="auto_backup">Auto backup</string>
    <string name="tap_to_set_up">Tap to set up</string>
    <string name="notes_will_be">Notes will be backed up to your phone\'s internal storage everyday.\n\nThis may not work if you have power saving mode enabled</string>
    <string name="choose_folder">Choose folder</string>
    <string name="disable_auto_backup">Disable auto backup</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="cant_find_folder">Can\'t find folder. It may have been moved or deleted</string>

    <string name="export_backup">Export backup</string>
    <string name="import_backup">Import backup</string>

    <string name="about">About</string>
    <string name="libraries">Libraries</string>
    <string name="rate">Rate this app</string>
    <string name="send_feedback">Send feedback</string>

    <string name="github" translatable="false">GitHub</string>

    <!-- Widget -->
    <string name="single_note">Single note</string>
    <string name="select_note">Select note</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="russian">Rusian</string>
    <string name="thai">Thailand</string>
    <string name="hindi">Hindi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">Success</string>
    <string name="wrong_answer_please_reply_again">Wrong answer please reply again!</string>
    <string name="intro01">Record your tasks, thoughts, and problems that need solving</string>
    <string name="intro02">Display notes right on your phone screen</string>
    <string name="intro03">Set a password to keep your notes private and secure</string>
    <string name="change_passcode">Change passcode</string>
    <string name="security">Security</string>
    <string name="home">Home</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="what_do_you_want_us_to_call_you">What do you want us to call you?</string>
    <string name="input_your_name">Input Your Name...</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm password</string>
    <string name="please_input_confirm_4_digit_pin_code_for_your_diary">Please input confirm 4-Digit Pin Code for your Diary</string>
    <string name="please_wrong_password_please_re_enter">Please Wrong password, please re-enter</string>
    <string name="switch_to_pattern">Switch to Pattern</string>
    <string name="select_language">Select Language</string>
    <string name="apply">Apply</string>
    <string name="check_it_now">Check it Now!</string>
    <string name="type_your_answer">Type your answer</string>
    <string name="set_passcode">Set passcode</string>
    <string name="create_4_digit_pin_for_your_diary">Create 4-Digit Pin for your Diary</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="enter_4_digit_pin_for_your_diary">Enter 4-Digit Pin for your Diary</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="info_user">Info User</string>
    <string name="continue_">Continue</string>
    <string name="security_question">Security Question</string>
    <string name="ok">ok</string>
    <string name="do_you_want_to_set_a_security_password">Do you want to set a security password?</string>
    <string name="helps_you_avoid_strangers_invading_your_private_notes">Helps you avoid strangers invading your private notes.</string>
    <string name="skip">Skip</string>
    <string name="language">Language</string>
    <string name="use_the_password_to_open_the_application">Use the password to open the application</string>
    <string name="your_name">Your Name</string>
    <string name="ta_thanh_son_n_done_3_months_ago">Ta Thanh Son \n done 3 months ago</string>


</resources>